--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
 	<div class="container">
-	  <h1>Chase's Card Collection</h1>
+	  <h1>Baseball Cards</h1>
 	  <p class="lead">The official online marketplace for digital trading cards.</p>
 	  <p><%= link_to "Create Account", new_user_registration_path, :class => "btn btn-lg btn-primary" %></p>
 	</div>
