--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -11,6 +11,11 @@
 		padding: 0;
 	}
 
+	.navbar-header {
+		position: relative;
+		z-index: 10;
+	}
+
 	.navbar-brand {
 		color: #fff;
 		padding-left: 80px;
